Move to backticks from highlight and remove top microservices

--- a/layouts/partials/extend_footer.html
+++ b/layouts/partials/extend_footer.html
@@ -28,6 +28,7 @@
                 <li><a href="https://ozkanpakdil.github.io/java-benchmarks/">Java Benchmarks</a></li>
                 <li><a href="https://ozkanpakdil.github.io/java-json-benchmark/">JSON Benchmarks</a></li>
                 <li><a href="https://ozkanpakdil.github.io/uk-visa-sponsor/">UK Visa Sponsors</a></li>
+                <li><a href="https://ozkanpakdil.github.io/test-microservice-frameworks/">Microservice Framework Tests</a></li>
             </ul>
             <p><a href="/index.xml">📡 RSS Feed</a></p>
         </div>
